쿠팡 광고 추가

--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -1,11 +1,40 @@
 ---
 layout: archive
 permalink: /ads/
-title: "Ads"
+title: "제휴페이지"
 author_profile: true
 ---
-{% for item in site.ads %}
-  <h2>{{ item.title }}</h2>
-  <p>{{ item.description }}</p>
-  <p><a href="{{ item.url }}">{{ item.title }}</a></p>
-{% endfor %}
+
+<iframe src="https://partners.coupang.com/cdn/redirect?url=widget%2Fsearch-bar%2F0.0.5%2Ffavicon-02.html%3FtrackingCode%3DAF7354022" width="100%" height="36" frameborder="0" scrolling="no"></iframe>
+
+디지털 베스트
+<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+	new PartnersCoupang.G({ 
+      id:3537,
+      width: '100%',
+      height: 100
+  });
+</script>
+<p>
+
+가전디지털 기획전
+<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+	new PartnersCoupang.G({ 
+      id:3538,
+      width: '100%',
+      height: 100
+  });
+</script>
+<p>
+
+쿠팡 기획전
+<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+	new PartnersCoupang.G({ 
+      id:3539,
+      width: '100%',
+      height: 100
+  });
+</script>
