--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -2,7 +2,7 @@
 layout: archive
 permalink: /ads/
 title: "제휴페이지"
-author_profile: true
+author_profile: false
 ---
 
 <iframe src="https://partners.coupang.com/cdn/redirect?url=widget%2Fsearch-bar%2F0.0.5%2Flogo-01.html%3FtrackingCode%3DAF7354022" width="100%" height="75" frameborder="0" scrolling="no"></iframe>
