change coupang partners link

--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -5,36 +5,24 @@ title: "제휴페이지"
 author_profile: false
 ---
 
-<iframe src="https://partners.coupang.com/cdn/redirect?url=widget%2Fsearch-bar%2F0.0.5%2Flogo-01.html%3FtrackingCode%3DAF7354022" width="100%" height="75" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://coupa.ng/bNoZ9J" width="100%" height="36" frameborder="0" scrolling="no"></iframe>
 
 디지털 베스트
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
-	new PartnersCoupang.G({ 
-      id:3537,
-      width: '100%',
-      height: 100
-  });
+    new PartnersCoupang.G({"id":3537,"subId":null});
 </script>
 <p>
 
 가전디지털 기획전
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
-	new PartnersCoupang.G({ 
-      id:3538,
-      width: '100%',
-      height: 100
-  });
+    new PartnersCoupang.G({"id":3538,"subId":null});
 </script>
 <p>
 
 쿠팡 기획전
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
-	new PartnersCoupang.G({ 
-      id:3539,
-      width: '100%',
-      height: 100
-  });
+    new PartnersCoupang.G({"id":3539,"subId":null});
 </script>
