--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -5,24 +5,24 @@ title: "제휴페이지"
 author_profile: false
 ---
 
-<iframe src="https://coupa.ng/bNoZ9J" width="100%" height="36" frameborder="0" scrolling="no"></iframe>
+<iframe src="https://coupa.ng/b1EjV8" width="100%" height="36" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
 
 디지털 베스트
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
-    new PartnersCoupang.G({"id":3537,"subId":null});
+  new PartnersCoupang.G({ "id": 3537, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
 </script>
 <p>
 
 가전디지털 기획전
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
-    new PartnersCoupang.G({"id":3538,"subId":null});
+  new PartnersCoupang.G({ "id": 3538, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
 </script>
 <p>
 
 쿠팡 기획전
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
-    new PartnersCoupang.G({"id":3539,"subId":null});
+  new PartnersCoupang.G({ "id": 3539, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
 </script>
