--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -7,6 +7,14 @@ author_profile: false
 
 <iframe src="https://coupa.ng/b1EjV8" width="100%" height="36" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
 
+
+관심 상품
+<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+  new PartnersCoupang.G({ "id": 490919, "template": "carousel", "trackingCode": "AF7354022", "width": "680", "height": "140" });
+</script>
+<p>
+
 디지털 베스트
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
@@ -25,4 +33,10 @@ author_profile: false
 <script src="https://ads-partners.coupang.com/g.js"></script>
 <script>
   new PartnersCoupang.G({ "id": 3539, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
+</script>
+
+애플
+<script src="https://ads-partners.coupang.com/g.js"></script>
+<script>
+  new PartnersCoupang.G({ "id": 490919, "template": "carousel", "trackingCode": "AF7354022", "width": "680", "height": "140" });
 </script>
