--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -6,7 +6,7 @@ author_profile: false
 ---
 
 <iframe src="https://coupa.ng/b1EjV8" width="100%" height="36" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
-
+<p>
 
 관심 상품
 <script src="https://ads-partners.coupang.com/g.js"></script>
@@ -16,27 +16,24 @@ author_profile: false
 <p>
 
 디지털 베스트
-<script src="https://ads-partners.coupang.com/g.js"></script>
-<script>
-  new PartnersCoupang.G({ "id": 3537, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
-</script>
+<iframe
+  src="https://ads-partners.coupang.com/widgets.html?id=3537&template=carousel&trackingCode=AF7354022&subId=&width=680&height=140"
+  width="680" height="140" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
 <p>
 
 가전디지털 기획전
-<script src="https://ads-partners.coupang.com/g.js"></script>
-<script>
-  new PartnersCoupang.G({ "id": 3538, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
-</script>
+<iframe
+  src="https://ads-partners.coupang.com/widgets.html?id=3538&template=carousel&trackingCode=AF7354022&subId=&width=680&height=140"
+  width="680" height="140" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
 <p>
 
 쿠팡 기획전
-<script src="https://ads-partners.coupang.com/g.js"></script>
-<script>
-  new PartnersCoupang.G({ "id": 3539, "trackingCode": "AF7354022", "subId": null, "template": "carousel", "width": "680", "height": "140" });
-</script>
+<iframe
+  src="https://ads-partners.coupang.com/widgets.html?id=3539&template=carousel&trackingCode=AF7354022&subId=&width=680&height=140"
+  width="680" height="140" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
+<p>
 
 애플
-<script src="https://ads-partners.coupang.com/g.js"></script>
-<script>
-  new PartnersCoupang.G({ "id": 490919, "template": "carousel", "trackingCode": "AF7354022", "width": "680", "height": "140" });
-</script>
+<iframe
+  src="https://ads-partners.coupang.com/widgets.html?id=490919&template=carousel&trackingCode=AF7354022&subId=&width=680&height=140"
+  width="680" height="140" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
