--- a/_pages/ads.html
+++ b/_pages/ads.html
@@ -9,10 +9,9 @@ author_profile: false
 <p>
 
 관심 상품
-<script src="https://ads-partners.coupang.com/g.js"></script>
-<script>
-  new PartnersCoupang.G({ "id": 490919, "template": "carousel", "trackingCode": "AF7354022", "width": "680", "height": "140" });
-</script>
+<iframe
+  src="https://ads-partners.coupang.com/widgets.html?id=490921&template=carousel&trackingCode=AF7354022&subId=&width=680&height=140"
+  width="680" height="140" frameborder="0" scrolling="no" referrerpolicy="unsafe-url"></iframe>
 <p>
 
 디지털 베스트
